c/examples/writing-a-c-compiler-tests/tests/chapter_14/invalid_types/extra_credit/switch_on_pointer.c
/* The controlling expression of a switch statement
 * must be an integer, not a pointer
 */
int main(void) {
    int *x = 0;
    switch(x) {
        case 0: return 0;
        default: return 1;
    }
}